Compiler Bouw/compiler/test/basic/stephen/fail/no_return.cvc
// Should produce an error because fun must return something.

#include "civic.h"

int fun() {
    int v = 5;
}

export int main() {
    fun();
    return 0;
}
